CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.23

	- The scheduler's device loading code used the wrong
	  size limits for the make/model and info parameters
	  (STR #1035)
	- The PNG loading code did not use a "long unsigned
	  integer" format specifier for the width and height
	  (STR #1032)
	- The web interface only showed the first 4 or 8
	  characters of "{variable-name}" for undefined template
	  variables (STR #1031)
	- The hpgltops filter did not handle a common PCL
	  command to enter HP-GL/2 mode (STR #1037)


CHANGES IN CUPS V1.1.23rc1

	- The lpr man page did not document the "-U" option (STR
	  #998)
	- The scheduler no longer sends the page-set option when
	  printing banner pages (STR #995)
	- Fixed a debug message in the imagetops filter (STR
	  #1012)
	- The lprm man page listed the "-" option in the wrong
	  order (STR #911)
	- The hpgltops filter contained two buffer overflows
	  that could potentially allow remote access to the "lp"
	  account (STR #1024)
	- The lppasswd command did not protect against file
	  descriptor or ulimit attacks (STR #1023)
	- The "lpc status" command used the wrong resource path
	  when querying the list of printers and jobs, causing
	  unnecessary authentication requests (STR #1018)
	- The httpWait() function did not handle signal
	  interruptions (STR #1020)
	- The USB backend used the wrong size status variable
	  when checking the printer status (STR #1017)
	- The scheduler did not delete classes from other
	  classes or implicit classes, which could cause a crash
	  (STR #1015)
	- The IPP backend now logs the remote print job ID at
	  log level NOTICE instead of INFO (so it shows up in
	  the error_log file...)


CHANGES IN CUPS V1.1.22

	- The lpstat man page incorrectly listed the "-s" option
	  as using the equivalent of the "-p" option to list the
	  printers; it uses the "-v" option to list the printers
	  (STR #986)
	- Now allow 0-length reads in the CUPS file API (STR
	  #985)